@@ -246,6 +246,11 @@ Behaves exactly as the L</handle_error> class method described above.
 
 =back
 
+=head1 ACKNOWLEDGEMENTS
+
+Special thanks to L<CV-Library Ltd.|https://cv-library.co.uk> for their
+support in the development of this library.
+
 =head1 COPYRIGHT AND LICENSE
 
 This software is copyright (c) 2023 by José Joaquín Atria.
